recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:3: error: not found: value estMembre
  if (!estMembre(l,v)) {
       ^Occurrences:6: error: not found: value occurences
    return 1+occurences(l.tail,v)
             ^