recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (!estMembre(l,v)) {
    return 0
  } else {
    return 1+occurences(l.tail,v)
  }
}